@@ -1,5 +1,11 @@
 2006-08-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* datrie/Makefile.am (pkginclude_HEADERS): Installed sb-trie.h.
+
+	* datrie/sb-trie.h: Fixed file name in doxygen tag.
+
+2006-08-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* datrie/Makefile.am, +datrie/alpha-map.{h,c}, +datrie/sb-trie.{h,c}:
 	Added alphabet map to map between character set and trie alphabet
 	codes. Also added SBTrie wrapper for 8-bit character sets.
